Start db connection

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -24,3 +24,4 @@ vscode:
   extensions:
     - Dart-Code.flutter@3.7.1:gujVOCgsbgoN2/po8X1tfA==
     - Dart-Code.dart-code@3.7.1:3XT4xvtPoRdNasA5smNMiA==
+    - PeterHdd.dartgettersetter@0.0.4:2WpV00zKF+HmOFJS6Io64w==
