--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,10 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: "^0.1.2"
+  mongo_dart: ^0.4.0
+  font_awesome_flutter: ^8.2.0
+  charts_flutter: ^0.8.1
 
 dev_dependencies:
   flutter_test:
