--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: "^0.1.2"
-  mongo_dart: ^0.4.0
+  mongo_dart:
+    git:
+        url: "https://github.com/tgercek/mongo_dart.git"
   font_awesome_flutter: ^8.2.0
   charts_flutter: ^0.8.1
 
